Fix xargs quote failure in CI scripts, rename Lib's to Libs

--- a/.addon-release.yml
+++ b/.addon-release.yml
@@ -1,4 +1,4 @@
-addon-name: "Lib's - Keystone Roulette"
+addon-name: "Libs - Keystone Roulette"
 addon-description: "randomizes Mythic+ keystone selection"
 urls:
   curseforge: "https://www.curseforge.com/wow/addons/libs-keystoneroulette"
