--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Generate Smart Changelog with AI Summaries
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
           AI_PROVIDER: gemini
           GITHUB_REF: ${{ github.ref }}
         run: |
